--- a/src/assets/styles/pages/publications-page.scss
+++ b/src/assets/styles/pages/publications-page.scss
@@ -136,6 +136,174 @@
   }
 
   &__container {
-    
+    margin: 0 auto;
+    padding: 48px calc(#{$col-part-d}) 60px;
+
+    width: calc(#{$col-part-d} * 8 - #{$col-gap-d});
+    @media (max-width: ($breakpoint - 1px)) {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+    }
+
+    background: $color-white;
+    border-radius: 4px;
+  }
+
+  &__title {
+    margin-bottom: 22px;
+  }
+
+  &__image {
+    margin-top: 20px;
+    @media (max-width: ($breakpoint - 1px)) {
+      margin-top: 10px;
+    }
+  }
+
+  &__section {
+    margin: 175px 0 100px;
+    @media (max-width: ($breakpoint - 1px)) {
+      margin: 0;
+      padding: 63px 0 60px;
+
+      background: $color-white;
+    }
+  }
+  &__section-cat {
+    display: flex;
+  }
+  &__section-title {
+    margin-bottom: 20px;
+    @media (max-width: ($breakpoint - 1px)) {
+      margin-bottom: 16px;
+    }
+  }
+  &__section-text {
+    @media (max-width: ($breakpoint - 1px)) {
+      @include fsl(14px, 140%);
+    }
+
+    &:not(:first-child) {
+      margin-top: 12px;
+      @media (max-width: ($breakpoint - 1px)) {
+        margin-top: 8px;
+      }
+    }
+  }
+  &__section-img {
+    display: flex;
+    align-items: center;
+
+    border-radius: 4px;
+    @media (max-width: ($breakpoint - 1px)) {
+      border-radius: 2px;
+    }
+    overflow: hidden;
+  }
+  &__section-inner {
+    margin-top: 32px;
+    @media (max-width: ($breakpoint - 1px)) {
+      margin-top: 20px;
+    }
+  }
+  &__section-caption {
+    margin-top: 12px;
+    @media (max-width: ($breakpoint - 1px)) {
+      margin-top: 4px;
+      @include fsl(10px, 140%);
+    }
+    @include fsl(12px, 140%);
+  }
+  &__section-container {
+    width: 50%;
+    @media (max-width: ($breakpoint - 1px)) {
+      width: 100%;
+    }
+    display: flex;
+    align-items: center;
+
+    border-radius: 4px;
+    @media (max-width: ($breakpoint - 1px)) {
+      border-radius: 2px;
+    }
+    overflow: hidden;
+  }
+  &__section-slider {
+    padding: 35px 20px;
+    @media (max-width: ($breakpoint - 1px)) {
+      padding: 20px calc(#{$col-part-alt});
+    }
+    position: relative;
+    z-index: 0;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    background: $color-darken-white;
+    border-radius: 4px;
+  }
+  &__section-buttons {
+    --pad: 20px;
+    @media (max-width: ($breakpoint - 1px)) {
+      --pad: 9px;
+    }
+
+    position: absolute;
+    left: var(--pad);
+    right: var(--pad);
+  }
+  &__section-list {
+    margin-top: 20px;
+
+    display: flex;
+    @media (max-width: ($breakpoint - 1px)) {
+      flex-wrap: wrap;
+    }
+  }
+  &__section-item {
+    width: calc(#{$col-part-d});
+    @media (max-width: ($breakpoint - 1px)) {
+      width: calc(#{$col-part-alt} * 2);
+    }
+
+    &--wide {
+      width: auto;
+      @media (max-width: ($breakpoint - 1px)) {
+        margin-top: 12px;
+        width: 100%;
+      }
+    }
+  }
+  &__section-label {
+    margin-bottom: 4px;
+    @media (max-width: ($breakpoint - 1px)) {
+      margin-bottom: 2px;
+      @include fsl(10px, 140%);
+    }
+    @include fsl(12px, 140%);
+    text-transform: uppercase;
+    color: $color-gray;
+  }
+
+  &__text {
+    @include fsl(14px, 140%);
+    @media (max-width: ($breakpoint - 1px)) {
+      @include fsl(12px, 140%);
+    }
+
+    &--limited {
+      @media (max-width: ($breakpoint - 1px)) {
+        max-width: 256px;
+      }
+    }
+  }
+
+  &__slider {
+    max-width: 303px;
+
+    border-radius: 4px;
+    overflow: hidden;
   }
 }
