--- a/src/views/pages/publications-detail.pug
+++ b/src/views/pages/publications-detail.pug
@@ -1,36 +1,60 @@
 extends ../layouts/master.pug
 
-include ../components/navigation
+include ../components/slider-buttons
 
 block content 
-  .publications-page
-    section.section.section--first.section--last
+  .publications-page 
+    section.publications-page__section
       .container 
-        +navigation(items=['Публикации'] page='Участие в выставке «Технофорум-2019»')
-        .publications-page__row 
-          .publications-page__col
-            .publications-page__tag 
-              |Новости
-            .publications-page__content 
-              p.publications-page__content-text 
-                |В период с 21 по 24 октября компания "ИРЛЕН-ИНЖИНИРИНГ" приняла участие в ежегодной международной выставке "Технофорум-2020".
-              p.publications-page__content-text 
-                |Традиционно на выставке были представлены как новинки, так и уже проверенный, хорошо зарекомендовавший себя инструмент ведущих производителей Yamawa, Osawa, NikkoTools.  Посетителям был представлен вспомогательный инструмент фирм Kintek, UFS, StimZet, Evermore и др.
-            .section 
+        .publications-page__container
+          ul.breadcrumbs 
+            li.breadcrumbs__item 
+              a.breadcrumbs__link(href="#") 
+                |Главная
+            li.breadcrumbs__item 
+              a.breadcrumbs__link(href="#") 
+                |Публикации
+            li.breadcrumbs__item 
+              a.breadcrumbs__link(href="#") 
+                |Технологии
+            li.breadcrumbs__item 
+              .breadcrumbs__text 
+                |Выставка «Металлообработка-2020»
+          h2.publications-page__title   
+            |Выставка «Металлообработка-2020»
+          .publications-page__section-cat
+            .publications-page__category  
+              |Мероприятия
+          .publications-page__section-list 
+            .publications-page__section-item 
+              .publications-page__section-label
+                |Начало
+              .publications-page__text
+                |18.03.2021
+            .publications-page__section-item 
+              .publications-page__section-label
+                |окончание
+              .publications-page__text
+                |20.03.2021
+            .publications-page__section-item.publications-page__section-item--wide
+              .publications-page__section-label
+                |Адрес
+              .publications-page__text.publications-page__text--limited
+                |г. Санкт-Петербург, Петербургское шоссе, 64/1.
+          .margin-top 
+            p.publications-page__section-text 
+              |В период с 21 по 24 октября компания "ИРЛЕН-ИНЖИНИРИНГ" приняла участие в ежегодной международной выставке "Технофорум-2020".
+            p.publications-page__section-text 
+              |Традиционно на выставке были представлены как новинки, так и уже проверенный, хорошо зарекомендовавший себя инструмент ведущих производителей Yamawa, Osawa, NikkoTools.  Посетителям был представлен вспомогательный инструмент фирм Kintek, UFS, StimZet, Evermore и др.
+          .publications-page__section-img.margin-top
+            img(src="assets/images/publication.jpg", alt="")
+          .margin-top 
+            .publications-page__section-slider 
               .publications-page__slider
-                .publications-page__buttons 
-                  |buttons
                 .swiper-container.swiper-container--visible--mobile.swiper-container--slide-width-auto.swiper-container--slide-height-max(data-slider-id='10' data-slider-prev='13' data-slider-next='14')
                   .swiper-wrapper 
                     - for (i = 0; i < 6; i++)
                       .swiper-slide 
-                        img.publications-page__slider-img(src="assets/images/publication.jpg", alt="")
-            .section__button  
-              a.publications-page__button(href="#") 
-                .publications-page__button-icon 
-                  +big-arrow-svg.publications-page__button-svg
-                .publications-page__button-text 
-                  |Вернуться
-          .publications-page__col
-            .publications-page__img 
-              img(src="assets/images/publication-2.jpg", alt="")
+                        img.publications-page__slider-img(src="assets/images/publication-2.jpg", alt="")
+              .publications-page__section-buttons
+                +slider-buttons.slider-buttons--small.slider-buttons--wide(prev = '13' next = '14')
