--- a/src/assets/styles/pages/instruments-page.scss
+++ b/src/assets/styles/pages/instruments-page.scss
@@ -2,14 +2,22 @@
   $comp: &;
 
   &__tabs {
-    padding: 20px 20px 0;
+    padding: 20px 0 0;
+    
+    background: $color-white;
+    border-top: 1px solid $color-light-gray;
+    border-bottom: 1px solid $color-light-gray;
+
+    &.hidden {
+      opacity: 0;
+    }
+  }
+  &__tabs-container {
+    margin-bottom: -1px;
 
     display: grid;
     grid-template-columns: repeat(6, auto);
     column-gap: 66px;
-
-    background: $color-white;
-    border-radius: 4px
   }
   &__tabs-item {
     padding-bottom: 20px;
