Update form response and validation

--- a/src/assets/styles/helpers/helpers.scss
+++ b/src/assets/styles/helpers/helpers.scss
@@ -51,6 +51,7 @@ $color-light-blue: #CAFDFA;
 $color-gray: #838383;
 $color-light-gray: #E0E0E0;
 $color-light-green: #CAFDFA;
+$color-red: #ED2424;
 
 $transition-timing-function: cubic-bezier(0.65, 0, 0.35, 1);
 $transition-duration: .5s;
