--- a/src/assets/styles/modules/mobile-menu.scss
+++ b/src/assets/styles/modules/mobile-menu.scss
@@ -1,4 +1,5 @@
 .mobile-menu {
+  $comp: &;
 
   position: absolute;
   top: 0;
@@ -9,6 +10,24 @@
 
   transition: $transition;
   pointer-events: none;
+
+  &--filters {
+    z-index: 1000;
+
+    #{$comp}__container {
+      padding-top: 19px;
+    }
+  }
+
+  &.menu {
+    #{$comp}__overlay {
+      opacity: 1;
+      pointer-events: all;
+    }
+    #{$comp}__container {
+      transform: translateX(0);
+    }
+  }
 
   &__overlay {
     position: absolute;
@@ -189,5 +208,10 @@
     &:not(:first-child) {
       margin-top: 12px;
     }
+  }
+
+  &__title {
+    margin-bottom: 24px;
+    margin-left: 16px;
   }
 }
