--- a/src/assets/styles/modules/mobile-menu.scss
+++ b/src/assets/styles/modules/mobile-menu.scss
@@ -8,6 +8,10 @@
   width: 100vw;
   height: 100vh;
 
+  @media (min-width: $breakpoint) {
+    display: none;
+  }
+
   transition: $transition;
   pointer-events: none;
 
