--- a/src/assets/styles/pages/about-page.scss
+++ b/src/assets/styles/pages/about-page.scss
@@ -7,18 +7,30 @@
   }
   &__section-row {
     display: flex;
+    @media (max-width: ($breakpoint - 1px)) {
+      display: block;
+    }
     justify-content: space-between;
   }
   &__section-col {
     flex-shrink: 0;
     width: calc(#{$col-part-d} * 6 - #{$col-gap-d});
+    @media (max-width: ($breakpoint - 1px)) {
+      width: 100%;
+    }
 
     &:nth-child(1) {
       padding: 40px 56px 40px 40px;
+      @media (max-width: ($breakpoint - 1px)) {
+        padding: 12px 12px 20px
+      }
     }
   }
   &__section-title {
     @include fsl(24px, 140%);
+    @media (max-width: ($breakpoint - 1px)) {
+      @include fsl(14px, 140%);
+    }
     font-weight: 500;
   }
   &__section-img {
@@ -28,67 +40,165 @@
     overflow: hidden;
   }
 
-  &__industries {
-    display: flex;
-    justify-content: space-between;
+  &__history {
+    position: relative;
+    z-index: 0;
+
+    &::before {
+      content: '';
+      position: absolute;
+      left: 4px;
+      top: 30px;
+      bottom: 50px;
+
+      @media (max-width: ($breakpoint - 1px)) {
+        display: none;
+      }
+
+      width: 1px;
+
+      background: $color-blue;
+      opacity: 0.2;
+    }
   }
-  &__industries-item {
+  &__history-item {
+
+    &:not(:first-child) {
+      margin-top: 48px;
+      @media (max-width: ($breakpoint - 1px)) {
+        margin-top: 32px;
+      }
+    }
+  }
+  &__history-row {
+    display: flex;
+    @media (max-width: ($breakpoint - 1px)) {
+      display: block;
+    }
+  }
+  &__history-col {
     flex-shrink: 0;
-    width: calc(#{$col-part-d} * 3 - #{$col-gap-d});
+
+    &:nth-child(1) {
+      width: calc(#{$col-part-d} * 6);
+      @media (max-width: ($breakpoint - 1px)) {
+        width: 100%;
+      }
+    }
+    &:nth-child(2) {
+      width: calc(#{$col-part-d} * 5 - #{$col-gap-d});
+      @media (max-width: ($breakpoint - 1px)) {
+        margin-top: 12px;
+        width: 100%;
+      }
+    }
   }
-  &__industries-container {
-    padding: 20px 0;
+  &__history-year {
+    position: relative;
+    padding-left: calc(#{$col-part-d} * 2);
+    @media (max-width: ($breakpoint - 1px)) {
+      padding-left: 0;
+      @include fsl(32px, 100%);
+    }
+    @include fsl(48px, 100%);
+    color: $color-blue;
+    font-weight: 500;
 
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    min-height: 174px;
+    &::before {
+      --size: 9px;
 
+      content: "";
+      position: absolute;
+      top: 50%;
+      left: 0;
+
+      @media (max-width: ($breakpoint - 1px)) {
+        display: none;
+      }
+
+      width: var(--size);
+      height: var(--size);
+
+      border-radius: 50%;
+      background-color: $color-blue;
+    }
+  }
+  &__history-text {
+    @include fsl(18px, 140%);
+    @media (max-width: ($breakpoint - 1px)) {
+      @include fsl(16px, 140%);
+    }
+  }
+
+  &__stat {
     background: $color-white;
-    border-radius: 4px;
   }
-  &__industries-icon {
-    height: 75px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  &__stat-container {
+    position: relative;
+    z-index: 0;
+    padding: 120px 0 320px;
+    @media (max-width: ($breakpoint - 1px)) {
+      padding: 32px 0 158px;
+    }
   }
-  &__industries-text {
-    text-align: center;
-  }
-
-  &__services {
-    display: flex;
-    justify-content: space-between;
-  }
-  &__services-item {
-    flex-shrink: 0;
-    width: calc(#{$col-part-d} * 4 - #{$col-gap-d});
-
-    background: $color-white;
-    border-radius: 4px;
-    overflow: hidden;
-  }
-  &__services-img {
-    display: flex;
-    align-items: center;
-    
-    border-radius: 4px;
-    overflow: hidden;
-  }
-  &__services-container {
-    padding: 24px;
-
-    min-height: 276px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-  &__services-text {
-    @include fsl(18px, 120%);
+  &__stat-year {
+    margin-bottom: 24px;
+    @media (max-width: ($breakpoint - 1px)) {
+      margin-bottom: 14px;
+      @include fsl(48px, 100%);
+    }
+    @include fsl(124px, 100%);
+    color: $color-blue;
     font-weight: 500;
   }
-  &__services-btn {
-    margin-top: 20px;
+  &__stat-row {
+    display: flex;
+    @media (max-width: ($breakpoint - 1px)) {
+      display: block;
+    }
+  }
+  &__stat-col {
+    flex-shrink: 0;
+
+    &:nth-child(1) {
+      padding-right: calc(#{$col-gap-d});
+      width: calc(#{$col-part-d} * 6);
+      @media (max-width: ($breakpoint - 1px)) {
+        padding-right: 0;
+        width: 100%;
+      }
+    }
+    &:nth-child(2) {
+      width: calc(#{$col-part-d} * 5 - #{$col-gap-d});
+      @media (max-width: ($breakpoint - 1px)) {
+        margin-top: 16px;
+        width: 100%;
+      }
+    }
+  }
+  &__stat-text {
+    max-width: 569px;
+    @media (max-width: ($breakpoint - 1px)) {
+      @include fsl(18px, 140%);
+    }
+    @include fsl(24px, 140%);
+  }
+  &__stat-img {
+    position: absolute;
+    z-index: -1;
+    top: 80px;
+    @media (max-width: ($breakpoint - 1px)) {
+      top: auto;
+      bottom: 40px;
+    }
+    right: 0;
+  }
+  &__stat-svg {
+    @media (max-width: ($breakpoint - 1px)) {
+      width: 100%;
+      height: auto;
+    }
   }
 }
+
+// 4px 
